force-app/main/default/objects/Relief_Fund__c/Relief_Fund__c.object-meta.xml
<CustomObject>
    <label>Relief Fund</label>
    <nameField>
        <displayFormat>RF-CED-{00000}</displayFormat>
        <label>Relief Fund Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Relief Funds</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>