force-app/main/default/objects/Relief_Fund__c/fields/Adult_Household_Number__c.field-meta.xml
<CustomField>
    <fullName>Adult_Household_Number__c</fullName>
    <description>Relief fund Adult Household Number</description>
    <label>Adult Household Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>