force-app/main/default/objects/Relief_Fund__c/fields/Case__c.field-meta.xml
<CustomField>
    <fullName>Case__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Relief fund related Case Id</description>
    <label>Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Relief Funds</relationshipLabel>
    <relationshipName>Contact_Relief_Funds</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>