force-app/main/default/objects/Relief_Fund__c/fields/Children_Details__c.field-meta.xml
<CustomField>
    <fullName>Children_Details__c</fullName>
    <description>Contact Household Children Detail</description>
    <label>Children Details</label>
    <type>TextArea</type>
</CustomField>