force-app/main/default/objects/Relief_Fund__c/fields/Children_Household_Number__c.field-meta.xml
<CustomField>
    <fullName>Children_Household_Number__c</fullName>
    <description>Relief fund Children Household Number</description>
    <label>Children Household Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>