force-app/main/default/objects/Relief_Fund__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Relief Fund Contact Reference</description>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Relief Funds</relationshipLabel>
    <relationshipName>Contact_Relief_Funds</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>