force-app/main/default/objects/Relief_Fund__c/fields/Council_Rates__c.field-meta.xml
<CustomField>
    <fullName>Council_Rates__c</fullName>
    <description>Relief Fund Support grant amount for Council Rates</description>
    <label>Council Rates</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>