force-app/main/default/objects/Relief_Fund__c/fields/Disbursement__c.field-meta.xml
<CustomField>
    <fullName>Disbursement__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Relief Fund Disbursement reference</description>
    <label>Disbursement</label>
    <referenceTo>RCMS__Disbursement__c</referenceTo>
    <relationshipLabel>Relief Funds</relationshipLabel>
    <relationshipName>Contact_Relief_Funds</relationshipName>
    <type>Lookup</type>
</CustomField>