force-app/main/default/objects/Relief_Fund__c/fields/Disbursement_Fund__c.field-meta.xml
<CustomField>
    <fullName>Disbursement_Fund__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Relief Fund Disbursement fund reference</description>
    <label>Disbursement Fund</label>
    <referenceTo>RCMS__Disbursement_Fund__c</referenceTo>
    <relationshipLabel>Relief Funds</relationshipLabel>
    <relationshipName>Relief_Funds</relationshipName>
    <type>Lookup</type>
</CustomField>