force-app/main/default/objects/Relief_Fund__c/fields/Distress_Contributors__c.field-meta.xml
<CustomField>
    <fullName>Distress_Contributors__c</fullName>
    <description>Distress Contributors pick list</description>
    <label>Distress Contributors</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Drought</fullName>
                <default>true</default>
                <label>Drought</label>
            </value>
            <value>
                <fullName>Bushfire</fullName>
            </value>
            <value>
                <fullName>Disease/ Outbreak</fullName>
            </value>
            <value>
                <fullName>Storm Damage</fullName>
            </value>
            <value>
                <fullName>Mental Health</fullName>
            </value>
            <value>
                <fullName>Medical Issues</fullName>
            </value>
            <value>
                <fullName>Personal Crisis</fullName>
            </value>
            <value>
                <fullName>Relationship Breakdown</fullName>
            </value>
            <value>
                <fullName>Debt / Financial Strain</fullName>
            </value>
            <value>
                <fullName>Restructure of Business</fullName>
            </value>
            <value>
                <fullName>COVID</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>