force-app/main/default/objects/Relief_Fund__c/fields/Emergency_Accommodation_Temporary_Housi__c.field-meta.xml
<CustomField>
    <fullName>Emergency_Accommodation_Temporary_Housi__c</fullName>
    <description>Relief Fund Support grant amount for Emergency Acco./ Temp. Housing</description>
    <label>Emergency Acco./ Temp. Housing</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>