force-app/main/default/objects/Relief_Fund__c/fields/Emergency_Clothing_Footwear__c.field-meta.xml
<CustomField>
    <fullName>Emergency_Clothing_Footwear__c</fullName>
    <description>Relief Fund Support grant amount for Emergency Clothing/ Footwear</description>
    <label>Emergency Clothing/ Footwear</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>