force-app/main/default/objects/Relief_Fund__c/fields/Fuel__c.field-meta.xml
<CustomField>
    <fullName>Fuel__c</fullName>
    <description>Relief Fund Support grant amount for Fuel</description>
    <label>Fuel</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>