force-app/main/default/objects/Relief_Fund__c/fields/Groceries_Amount__c.field-meta.xml
<CustomField>
    <fullName>Groceries_Amount__c</fullName>
    <description>Relief Fund Support grant amount for Groceries Amount</description>
    <label>Groceries Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>