force-app/main/default/objects/Relief_Fund__c/fields/Is_Relief_Grant_Upload_Verified__c.field-meta.xml
<CustomField>
    <fullName>Is_Relief_Grant_Upload_Verified__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check Is Relief Grant Verified</description>
    <label>Is Relief Grant Upload Verified</label>
    <type>Checkbox</type>
</CustomField>