force-app/main/default/objects/Relief_Fund__c/fields/Land_ownership__c.field-meta.xml
<CustomField>
    <fullName>Land_ownership__c</fullName>
    <description>Land ownership pick list</description>
    <label>Land ownership</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Owned</fullName>
                <default>true</default>
                <label>Owned</label>
            </value>
            <value>
                <fullName>Leased</fullName>
            </value>
            <value>
                <fullName>Share Farming</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>