force-app/main/default/objects/Relief_Fund__c/fields/Medical_Fees__c.field-meta.xml
<CustomField>
    <fullName>Medical_Fees__c</fullName>
    <description>Relief Fund Support grant amount for Medical Fees</description>
    <label>Medical Fees</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>