force-app/main/default/objects/Relief_Fund__c/fields/Other_Distress_Contributors__c.field-meta.xml
<CustomField>
    <fullName>Other_Distress_Contributors__c</fullName>
    <description>Other Distress Contributors detail</description>
    <label>Other Distress Contributors</label>
    <length>200</length>
    <type>Text</type>
</CustomField>