force-app/main/default/objects/Relief_Fund__c/fields/Other_Past_Existing_Relief_Fund__c.field-meta.xml
<CustomField>
    <fullName>Other_Past_Existing_Relief_Fund__c</fullName>
    <description>Other Past/Existing Relief Fund detail</description>
    <label>Other Past/Existing Relief Fund</label>
    <length>200</length>
    <type>Text</type>
</CustomField>