force-app/main/default/objects/Relief_Fund__c/fields/Other_Purpose_Support_Grant_Amount__c.field-meta.xml
<CustomField>
    <fullName>Other_Purpose_Support_Grant_Amount__c</fullName>
    <description>Relief Fund Support grant amount for Other Purpose Support Grant Amount</description>
    <label>Other Purpose Support Grant Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>