force-app/main/default/objects/Relief_Fund__c/fields/Other_Purpose_Support_Grant_Name__c.field-meta.xml
<CustomField>
    <fullName>Other_Purpose_Support_Grant_Name__c</fullName>
    <description>Other Purpose Support Grant Name description</description>
    <label>Other Purpose Support Grant Name</label>
    <length>200</length>
    <type>Text</type>
</CustomField>