force-app/main/default/objects/Relief_Fund__c/fields/Other_Service_Discovery__c.field-meta.xml
<CustomField>
    <fullName>Other_Service_Discovery__c</fullName>
    <label>Other Service Discovery</label>
    <length>200</length>
    <type>Text</type>
</CustomField>