force-app/main/default/objects/Relief_Fund__c/fields/Past_Existing_relief_Fund__c.field-meta.xml
<CustomField>
    <fullName>Past_Existing_relief_Fund__c</fullName>
    <description>Past/Existing relief Fund pick list</description>
    <label>Past/Existing relief Fund</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Anglicare</fullName>
            </value>
            <value>
                <fullName>Rotary</fullName>
            </value>
            <value>
                <fullName>Salvation Army</fullName>
            </value>
            <value>
                <fullName>Foodbank</fullName>
            </value>
            <value>
                <fullName>Rural Aid</fullName>
            </value>
            <value>
                <fullName>Vinnies</fullName>
            </value>
            <value>
                <fullName>Red Cross</fullName>
            </value>
            <value>
                <fullName>SA CWA</fullName>
            </value>
            <value>
                <fullName>The Good Shepherd</fullName>
            </value>
            <value>
                <fullName>Uniting Way</fullName>
            </value>
            <value>
                <fullName>Wyatt Trust</fullName>
            </value>
            <value>
                <fullName>Drought Angels</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>