force-app/main/default/objects/Relief_Fund__c/fields/Pet_Food__c.field-meta.xml
<CustomField>
    <fullName>Pet_Food__c</fullName>
    <description>Relief Fund Support grant amount for Pet Food</description>
    <label>Pet Food</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>