force-app/main/default/objects/Relief_Fund__c/fields/Post_Approval_Wellbeing_Survey__c.field-meta.xml
<CustomField>
    <fullName>Post_Approval_Wellbeing_Survey__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Post Approval Wellbeing Survey check</description>
    <label>Post Approval Wellbeing Survey</label>
    <type>Checkbox</type>
</CustomField>