force-app/main/default/objects/Relief_Fund__c/fields/Pre_Approval_Wellbeing_Survey__c.field-meta.xml
<CustomField>
    <fullName>Pre_Approval_Wellbeing_Survey__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Pre Approval Wellbeing Survey</description>
    <label>Pre Approval Wellbeing Survey</label>
    <type>Checkbox</type>
</CustomField>