force-app/main/default/objects/Relief_Fund__c/fields/Primary_Eligibility__c.field-meta.xml
<CustomField>
    <fullName>Primary_Eligibility__c</fullName>
    <description>Primary Eligibility Pick list</description>
    <label>Primary Eligibility</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Australian Resident</fullName>
                <default>true</default>
                <label>Australian Resident</label>
            </value>
            <value>
                <fullName>TR97/11*</fullName>
            </value>
            <value>
                <fullName>FHA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>