force-app/main/default/objects/Relief_Fund__c/fields/Rego_Vehicle_Licence_Renewal__c.field-meta.xml
<CustomField>
    <fullName>Rego_Vehicle_Licence_Renewal__c</fullName>
    <description>Relief Fund Support grant amount for Rego/Vehicle Licence Renewal</description>
    <label>Rego/Vehicle Licence Renewal</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>