force-app/main/default/objects/Relief_Fund__c/fields/Secondary_Eligibility__c.field-meta.xml
<CustomField>
    <fullName>Secondary_Eligibility__c</fullName>
    <description>Secondary Eligibility pick list</description>
    <label>Secondary Eligibility</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Impending cancellation of services/utilies</fullName>
                <default>true</default>
                <label>Impending cancellation of services/utilies</label>
            </value>
            <value>
                <fullName>Eligible for free Rural Financial Counse</fullName>
            </value>
            <value>
                <fullName>Government income support payments</fullName>
            </value>
            <value>
                <fullName>Incurring penalty interest</fullName>
            </value>
            <value>
                <fullName>Overdue bills for household</fullName>
            </value>
            <value>
                <fullName>Suffering from Immediate effects of nature Disaster</fullName>
            </value>
            <value>
                <fullName>Unable to obtain credit or increased finance</fullName>
            </value>
            <value>
                <fullName>Unable to provide food clothing shelter</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>