force-app/main/default/objects/Relief_Fund__c/fields/Service_Discovery__c.field-meta.xml
<CustomField>
    <fullName>Service_Discovery__c</fullName>
    <description>Service Discovery pick list</description>
    <label>Service Discovery</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Word of Mouth</fullName>
                <default>true</default>
                <label>Word of Mouth</label>
            </value>
            <value>
                <fullName>RBS Stakeholder</fullName>
            </value>
            <value>
                <fullName>Philanthropy Aust</fullName>
            </value>
            <value>
                <fullName>Financier/Accountant</fullName>
            </value>
            <value>
                <fullName>Government Agency</fullName>
            </value>
            <value>
                <fullName>Foundation SA</fullName>
            </value>
            <value>
                <fullName>Another Service Provider</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>