force-app/main/default/objects/Relief_Fund__c/fields/Total_Relief_Grant__c.field-meta.xml
<CustomField>
    <fullName>Total_Relief_Grant__c</fullName>
    <formula>Council_Rates__c  +  Emergency_Accommodation_Temporary_Housi__c  +  Emergency_Clothing_Footwear__c  +  Fuel__c  +  Groceries_Amount__c  +  Medical_Fees__c  +  Other_Purpose_Support_Grant_Amount__c  +  Pet_Food__c  +  Rego_Vehicle_Licence_Renewal__c  +  Utilities__c  +   Water__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Relief Grant</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>