force-app/main/default/objects/Relief_Fund__c/fields/Type_of_relief__c.field-meta.xml
<CustomField>
    <fullName>Type_of_relief__c</fullName>
    <description>Type of Relief fund pick list</description>
    <label>Type of Relief</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Type A</fullName>
                <default>true</default>
                <label>Type A</label>
            </value>
            <value>
                <fullName>Type B</fullName>
            </value>
            <value>
                <fullName>Type C</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>