force-app/main/default/objects/Relief_Fund__c/fields/Utilities__c.field-meta.xml
<CustomField>
    <fullName>Utilities__c</fullName>
    <description>Relief Fund Support grant amount for Utilities</description>
    <label>Utilities</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>