force-app/main/default/objects/Relief_Fund__c/fields/Water__c.field-meta.xml
<CustomField>
    <fullName>Water__c</fullName>
    <description>Relief Fund Support grant amount for Water</description>
    <label>Water</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>